# api_server/app/swagger/todos/actions.yml
@@ -15,7 +15,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/FetchAllTodosDto'
+                $ref: '#/components/schemas/FetchAllTodosResponseDto'
         '400':
           $ref: '../errors.yml#responses/400'
         '401':
@@ -117,8 +117,8 @@ paths:
 
 components:
   schemas:
-    FetchAllTodosDto:
-      $ref: './components/fetch_all_todo.dto.yml'
+    FetchAllTodosResponseDto:
+      $ref: './components/fetch_all_todos_response.dto.yml'
     FetchTodoDto:
       $ref: './components/fetch_todo.dto.yml'
     CreateTodoDto:
@@ -131,4 +131,3 @@ components:
       $ref: './components/update_todo_response.dto.yml'
     DeleteTodoResponseDto:
       $ref: './components/delete_todo_response.dto.yml'
-
